tests/NormalTests/paczka1/small_fuzzy/80219068.err
Error in line 7: A90" A90" 36,2
Error in line 13: 8aLDeESv1U S214 54,5
